@@ -23,6 +23,8 @@ Changes in 4.0.1
 
 11) Allow '/min' in RATE/BURST column.
 
+12) Check for state match
+
 Changes in 4.0.0 Final
 
 1)  Fix lite install.sh manpage problem.
